#21 Models y Schemas creados para usuarios, sedes y activos

--- a/public/users.html
+++ b/public/users.html
@@ -82,8 +82,8 @@
             <label for="txtIDType">Tipo de Identificación</label>
             <select id="txtIDType">
               <option value="">--Seleccione una opción--</option>
-              <option value="Fisica">Fisica</option>
-              <option value="Extranjera">Extranjeros</option>
+              <option value="1">Fisica</option>
+              <option value="2">Extranjeros</option>
             </select>
           </div>
           <div class="inputs">
@@ -114,9 +114,9 @@
             <label for="txtRol">Rol</label>
             <select id="rol-dropdown">
               <option value="">--Seleccione una opción--</option>
-              <option value="Admin">Administrador</option>
-              <option value="Provee">Proveduría</option>
-              <option value="Bodega">Encargado de bodega</option>
+              <option value="1">Jefatura</option>
+              <option value="2">Proveduría</option>
+              <option value="3">Encargado de bodega</option>
             </select>
           </div>
           <div class="inputs profile-image">
