--- a/public/formTransferUser.html
+++ b/public/formTransferUser.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Traslados - Solicitud de traslado de activo</title>
+  <title>Traslados</title>
   <link rel="icon" type="" href="img/proveguard-low-resolution-logo-color-on-transparent-background.png" />
   <link href="css/reset.css" rel="stylesheet" />
   <link href="css/general.css" rel="stylesheet" />
@@ -21,12 +21,7 @@
     </div>
     <ul class="nav-links">
       <li><a href="ingresoRegistroActivosAdmin.html">Registro / Edición de activos</a></li>
-      <li><a href="formularioTraslados.html">Traslados</a>
-        <ul class="submenu">
-          <li><a href="./formularioTraslados.html">Nueva solicitud de traslado</a></li>
-          <li><a href="./estadoTraslado.html">Estado de la solicitud</a></li>
-        </ul>
-      </li>
+      <li><a href="transferIncome.html">Traslados</a></li>
       <li><a href="bitacora.html">Bitácora</a></li>
       <li><a href="reportes.html">Reportes</a></li>
       <li><a href="users.html">Manejo de usuarios</a></li>
