--- a/public/editProfile.html
+++ b/public/editProfile.html
@@ -29,7 +29,7 @@
               >Registro / Edición de activos</a
             >
           </li>
-          <li><a href="formularioTraslados.html">Traslados</a></li>
+          <li><a href="transferIncome.html">Traslados</a></li>
           <li><a href="bitacora.html">Bitácora</a></li>
           <li><a href="reportes.html">Reportes</a></li>
           <li><a href="users.html">Manejo de usuarios</a></li>
