--- a/public/estadoTraslado.html
+++ b/public/estadoTraslado.html
@@ -23,24 +23,10 @@
         /><span id="rol"></span>
       </div>
       <ul class="nav-links">
-        <li>
-          <a href="ingresoRegistroActivosUsuario.html"
-            >Registro / Edición de activos</a
-          >
-        </li>
-        <li>
-          <a href="formularioTraslados.html">Traslados</a>
-          <ul class="submenu">
-            <li>
-              <a href="./formularioTraslados.html"
-                >Nueva solicitud de traslado</a
-              >
-            </li>
-            <li><a href="./estadoTraslado.html">Estado de la solicitud</a></li>
-          </ul>
-        </li>
-        <li><a href="#">Bitácora</a></li>
-        <li><a href="#">Reportes</a></li>
+        <li><a href="ingresoRegistroActivosUsuario.html">Registro / Edición de activos</a></li>
+        <li><a href="transferIncome.html">Traslados</a></li>
+        <li><a href="bitacora.html">Bitácora</a></li>
+        <li><a href="reportes.html">Reportes</a></li>
         <li><a href="users.html">Manejo de usuarios</a></li>
       </ul>
       <div class="left-nav">
