--- a/public/transferIncome.html
+++ b/public/transferIncome.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SICA-Registro / Edición de activos</title>
+    <title>Solicitud / Estado de Traslados</title>
     <link
       rel="icon"
       type=""
@@ -12,7 +12,7 @@
     />
     <link href="css/reset.css" rel="stylesheet" />
     <link href="css/general.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/ingresoRegistroActivosAdmin.css" />
+    <link rel="stylesheet" href="css/ingresoRegistroActivosUsuario.css" />
   </head>
 
   <body>
@@ -21,16 +21,16 @@
         <img
           src="img/proveguard-low-resolution-logo-color-on-transparent-background.png"
           alt="Logo ProveGuard"
-        /><span id="rol">Rol: Admin</span>
+        /><span id="rol">Rol: Usuario</span>
       </div>
       <nav>
         <ul class="nav-links">
           <li>
-            <a href="ingresoRegistroActivosAdmin.html"
+            <a href="ingresoRegistroActivosUsuario.html"
               >Registro / Edición de activos</a
             >
           </li>
-          <li><a href="transferIncome.html">Traslados</a></li>
+          <li><a href="formularioTraslados.html">Traslados</a></li>
           <li><a href="bitacora.html">Bitácora</a></li>
           <li><a href="reportes.html">Reportes</a></li>
           <li><a href="users.html">Manejo de usuarios</a></li>
@@ -48,40 +48,42 @@
         </button>
       </div>
     </header>
-    <main>
-      <div class="subtitles">
-        <br /><br />
-        <h2>Registro / Edicion de activos</h2>
-        <br />
-        <div class="buttonContainer">
-          <button onclick="window.location.href='registroDeActivosAdmin.html'">
-            Registrar activos
-          </button>
-          <button onclick="window.location.href='estadoDeRegistro.html'">
-            Solicitudes de registro
-          </button>
-        </div>
-      </div>
-    </main>
-    <footer class="footer">
-      <div class="company-name">
-        <h2>ProveGuard &copy;2023</h2>
-      </div>
-      <div class="copyright">
-        <h2>SICA - Sistema de Control de Activos</h2>
-        <h2>BotWeb Team</h2>
-      </div>
-      <ul class="nav-links">
-        <li><a href="#">Contacto</a></li>
-        <li><a href="#">Sedes</a></li>
-        <li><a href="#">Ayuda</a></li>
-      </ul>
-    </footer>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-    <script src="js/utils.js"></script>
-    <script src="js/Services/generalService.js"></script>
-    <script src="js/Controllers/sessionController.js"></script>
-  </body>
-</html>
+    <main>
+        <div class="subtitles">
+            <br></br>
+            <h2> Solicitud / Estado de Traslados</h2>
+            </br>
+
+            <div class="buttonContainer">
+                <button onclick="window.location.href='formTransferUser.html'"> Solicitud de Traslado</button>
+              <button onclick="window.location.href='estadoTraslado.html'">Estado de solicitudes</button>
+            </div>
+        </div>
+
+    </main>
+
+    <footer class="footer">
+        <div class="company-name">
+          <h2>ProveGuard &copy;2023</h2>
+        </div>
+        <div class="copyright">
+          <h2>SICA - Sistema de Control de Activos</h2>
+          <h2>BotWeb Team</h2>
+        </div>
+        <ul class="nav-links">
+          <li><a href="#">Contacto</a></li>
+          <li><a href="#">Sedes</a></li>
+          <li><a href="#">Ayuda</a></li>
+        </ul>
+      </footer>
+  
+      <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  
+      <script src="js/utils.js"></script>
+      <script src="js/Services/generalService.js"></script>
+      <script src="js/Controllers/sessionController.js"></script>
+    </body>
+  </html>
+  
