--- a/public/editProfile.html
+++ b/public/editProfile.html
@@ -56,16 +56,39 @@
       </div>
       <div class="container profile-img">
         <h2 class="subtitles">Imagen de perfil</h2>
-        <div
-          onclick="CambiarFoto()"
-          class="logo user-icon"
-          title="Editar imagen de perfil"
-        >
-          <img src="img/user-icon-black.png" alt="user-icon" />
+        <div>
+          <img id="imgUser" class="avatar" />
+          <button
+            type="button"
+            class="btnSubirFoto"
+            onclick="AbrirCloudinary('imgUser')"
+          >
+            Subir Foto
+          </button>
         </div>
       </div>
-      <div class="container security">
-        <h2 class="subtitles">Seguridad</h2>
+      <div class="container info">
+        <h2 class="subtitles">Informacion del usuario</h2>
+        <div class="inputs">
+          <label for="txt-id">Identificación</label>
+          <input type="text" id="txt-id" />
+        </div>
+        <div class="inputs">
+          <label for="txt-name">Nombre</label>
+          <input type="text" id="txt-nombre" />
+        </div>
+        <div class="inputs">
+          <label for="txt-lastname1">Primer Apellido</label>
+          <input type="text" id="txt-lastname1" />
+        </div>
+        <div class="inputs">
+          <label for="txt-lastname2">Segundo Apellido</label>
+          <input type="text" id="txt-lastname2" />
+        </div>
+        <div class="inputs">
+          <label for="txt-email">Email</label>
+          <input type="text" id="txt-email" />
+        </div>
         <div class="inputs">
           <label for="txt-pass">Contraseña actual</label>
           <input type="password" id="txt-pass" />
@@ -75,21 +98,8 @@
           <input type="password" id="txt-new-pass" />
         </div>
         <div class="inputs">
-          <button class="buttons disabled" type="button" onclick="Validation()">
-            Aceptar
-          </button>
-          <button class="buttons disabled" type="button">Cancelar</button>
-        </div>
-      </div>
-      <div class="container info">
-        <h2 class="subtitles">Informacion del usuario</h2>
-        <div class="inputs">
-          <label for="txt-name">Nombre</label>
-          <input type="text" id="txt-nombre" />
-        </div>
-        <div class="inputs">
-          <label for="txt-lastname">Apellido</label>
-          <input type="text" id="txt-lastname" />
+          <label for="txt-new-pass-confim">Confirmar Contraseña</label>
+          <input type="password" id="txt-new-pass-confim" />
         </div>
         <div class="inputs">
           <label for="txt-number">Telefono</label>
@@ -100,18 +110,26 @@
           <input type="date" id="txt-birthday" />
         </div>
         <div class="inputs">
-          <label for="txt-birthday">Unidad</label>
-          <select>
+          <label for="txt-rol">Rol</label>
+          <select id="txt-rol">
             <option value="">--Seleccione una opcion--</option>
-            <option value="SJ">San Jose</option>
-            <option value="Alajuela">Alajuela</option>
-            <option value="Heredia">Heredia</option>
-            <option value="Cartago">Cartago</option>
+            <option value="1">Administrador</option>
+            <option value="2">Proveeduria</option>
+            <option value="3">Encargado bodega</option>
           </select>
         </div>
         <div class="inputs">
-          <button class="buttons disabled" type="button">Aceptar</button>
-          <button class="buttons disabled" type="button">Cancelar</button>
+          <button
+            id="btnAccept"
+            class="buttons disabled"
+            type="button"
+            onclick="RegistrarDatos()"
+          >
+            Aceptar
+          </button>
+          <button id="btnCancel" class="buttons disabled" type="button">
+            Cancelar
+          </button>
         </div>
       </div>
     </main>
@@ -133,6 +151,7 @@
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://upload-widget.cloudinary.com/2.4.17/global/all.js"></script>
 
     <script src="js/utils.js"></script>
     <script src="js/Services/generalService.js"></script>
