label,establecer,css general

--- a/public/ingresoRegistroActivosUsuario.html
+++ b/public/ingresoRegistroActivosUsuario.html
@@ -53,15 +53,11 @@
         <br /><br />
         <h2>Registro / Edicion de activos</h2>
         <br />
-        <div class="buttonContainer">
-          <button
-            onclick="window.location.href='registroDeActivosUsuario.html'"
-          >
+        <div>
+          <button type="button" class="buttons" onclick="window.location.href='registroDeActivosUsuario.html'">
             Solicitud de Registro
           </button>
-          <button
-            onclick="window.location.href='estadoDeSolicitudesUsuario.html'"
-          >
+          <button type="button" class="buttons" onclick="window.location.href='estadoDeSolicitudesUsuario.html'">
             Estado de solicitud
           </button>
         </div>
