--- a/public/ingresoRegistroActivosAdmin.html
+++ b/public/ingresoRegistroActivosAdmin.html
@@ -53,11 +53,11 @@
         <br /><br />
         <h2>Registro / Edicion de activos</h2>
         <br />
-        <div class="buttonContainer">
-          <button onclick="window.location.href='registroDeActivosAdmin.html'">
+        <div>
+          <button type="button" class="buttons" onclick="window.location.href='registroDeActivosAdmin.html'">
             Registrar activos
           </button>
-          <button onclick="window.location.href='estadoDeRegistro.html'">
+          <button type="button" class="buttons" onclick="window.location.href='estadoDeRegistro.html'">
             Solicitudes de registro
           </button>
         </div>
