cambio formularios, Admin y Usuario,modificacion de JS

--- a/public/registroDeActivosAdmin.html
+++ b/public/registroDeActivosAdmin.html
@@ -12,7 +12,7 @@
     />
     <link href="css/reset.css" rel="stylesheet" />
     <link href="css/general.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/registroDeActivosUsuario.css" />
+    <link rel="stylesheet" href="css/registroDeActivosAdmin.css" />
   </head>
 
   <body>
@@ -49,65 +49,42 @@
       </div>
     </header>
     <main>
-      <div class="formularioRegistroActivos">
-        <h2 class="subtitles">Registro de activos</h2>
-        <div
-          class="registrarActivos"
-          id="formularioRegistro"
-          onsubmit="validarRegistro(event)"
-        >
-          <form action="registrar">
-            <div class="inputNombreActivo">
-              <!-- <label for="nombreDeActivo"></label> -->
-              <input
-                type="text"
-                placeholder="Nombre del activo"
-                class="nombreDeActivo"
-              />
-            </div>
-            <div class="ubicacionActivo">
-              <!-- <label for="ubicacion"></label> -->
-              <input
-                type="text"
-                placeholder="Ubicacion del activo"
-                class="ubicacion"
-              />
-            </div>
-            <div class="inputIdActivo">
-              <!-- <label for="idActivo"></label> -->
-              <input
-                type="text"
-                maxlength="6"
-                placeholder="ID del activo"
-                name="idActivo"
-              />
-            </div>
-            <div class="selecSede">
-              <!-- <label for="seleccionarSede"></label> -->
-              <select name="seleccionarSede" id="seleccionarSede">
-                <option value="" disabled selected hidden>
-                  Seleccione la sede
-                </option>
-                <option value="sedeCentral">Sede Central</option>
-                <option value="sedeHeredia">Sede Heredia</option>
-                <option value="sedeAlajuela">Sede Alajuela</option>
+      <div>
+        <form class="solicitudRegActivos">
+          <div>
+            <h2 class="subtitles">Registro de activo</h2>
+          </div>
+          <div>
+            <div class="inputs">
+              <label for="txtIDType">Seleccione la sede</label>
+              <select id="txtIDType">
+                <option value="">--Seleccione una opción--</option>
+                <option value="1">Central</option>
+                <option value="2">Heredia</option>
+                <option value="3">Alajuela</option>
+                <option value="4">Cartago</option>
               </select>
             </div>
-            <div class="button">
-              <button type="submit">Registrar</button>
+            <div class="inputs">
+              <label for="txtNom">Nombre del activo</label>
+              <input type="text" id="txtNom" />
             </div>
-          </form>
-        </div>
-        <div class="descripcion">
-          <!-- <label for="texto"></label> -->
-          <textarea
-            name="texto"
-            id="descripcionActivo"
-            cols="50"
-            rows="10"
-            placeholder=" Descripcion del activo que desea registrar"
-          ></textarea>
-        </div>
+            <div class="inputs">
+              <label for="txtUbActivo">Ubicacion del activo</label>
+              <input type="text" id="txtUbActivo" />
+            </div>
+            <div class="inputs">
+              <label for="txtIdActivo">ID del activo</label>
+              <input type="text" id="txtIdActivo" maxlength="6"/>
+            </div>
+            <div>
+              <label for="txtDescription">Descripción actual del activo...</label>
+              <textarea id="txtDescription"></textarea>
+            </div>
+            <button type="button" class="buttons" onclick="validarRegistro(event)">Registrar</button>
+            <button type="button" class="buttons" onclick= "window.location.href='ingresoRegistroActivosAdmin.html'">Cancelar</button>
+          </div>
+        </form>
       </div>
     </main>
     <footer class="footer">
@@ -124,9 +101,9 @@
         <li><a href="#">Ayuda</a></li>
       </ul>
     </footer>
+
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
     <script src="js/utils.js"></script>
     <script src="js/Services/generalService.js"></script>
     <script src="js/Controllers/sessionController.js"></script>
