fix (public/estadoDeSolicitudesUsuario.html): label hace match con id

--- a/public/estadoDeSolicitudesUsuario.html
+++ b/public/estadoDeSolicitudesUsuario.html
@@ -54,7 +54,7 @@
       <br/>
       <div>
         <div class="inputs">
-          <label for="text">Nombre o ID de activo</label>
+          <label for="txtNombreActivo">Nombre o ID de activo</label>
           <input type="text" class="buscador"id="txtNombreActivo"/>
         </div>
         <div class="botonBuscar">
