fix (public/estadoDeSolicitudesUsuario.html): label hace match con id

--- a/public/estadoDeRegistro.html
+++ b/public/estadoDeRegistro.html
@@ -54,7 +54,7 @@
       <br />
       <div>
         <div class="inputs">
-          <label for="text">Nombre o ID de activo</label>
+          <label for="txtBuscarActivo">Nombre o ID de activo</label>
           <input type="text" class = "buscador" id="txtBuscarActivo">
         </div>
         <div class="botonBuscar">
