Se agrego hola mundo

--- a/public/historialDonacion.html
+++ b/public/historialDonacion.html
@@ -17,6 +17,9 @@
 
   <body>
     <header class="header">
+      <div>
+        <h2>Holamundo</h2>
+      </div>
       <div id="prove-logo" class="logo" title="Inicio">
         <img
           src="img/proveguard-low-resolution-logo-color-on-transparent-background.png"
