--- a/public/formTransferUser.html
+++ b/public/formTransferUser.html
@@ -95,6 +95,7 @@
             <label for="txtCampus" id="lblCampus">Sede a trasladar</label>
             <select name="" id="txtCampus">
               <option value=""></option>
+              <option value="">--Seleccione una opción--</option>
               <option value="1">Sede de bodega</option>
               <option value="2">Sede de donaciones</option>
               <option value="3">Sede prinicpal</option>
