--- a/public/landpageOthers.html
+++ b/public/landpageOthers.html
@@ -27,7 +27,7 @@
           <li>
             <a href="registroDeActivosUsuario.html">Registro de activos</a>
           </li>
-          <li><a href="formularioTraslados.html">Traslados</a></li>
+          <li><a href="transferIncome.html">Traslados</a></li>
           <li><a href="bitacora.html">Bitácora</a></li>
           <li><a href="reportes.html">Reportes</a></li>
         </ul>
