--- a/public/ingresoRegistroActivosUsuario.html
+++ b/public/ingresoRegistroActivosUsuario.html
@@ -33,7 +33,6 @@
           <li><a href="transferIncome.html">Traslados</a></li>
           <li><a href="bitacora.html">Bitácora</a></li>
           <li><a href="reportes.html">Reportes</a></li>
-          <li><a href="users.html">Manejo de usuarios</a></li>
         </ul>
       </nav>
       <div class="left-nav">
@@ -54,10 +53,18 @@
         <h2>Registro / Edicion de activos</h2>
         <br />
         <div>
-          <button type="button" class="buttons" onclick="window.location.href='registroDeActivosUsuario.html'">
+          <button
+            type="button"
+            class="buttons"
+            onclick="window.location.href='registroDeActivosUsuario.html'"
+          >
             Solicitud de Registro
           </button>
-          <button type="button" class="buttons" onclick="window.location.href='estadoDeSolicitudesUsuario.html'">
+          <button
+            type="button"
+            class="buttons"
+            onclick="window.location.href='estadoDeSolicitudesUsuario.html'"
+          >
             Estado de solicitud
           </button>
         </div>
