--- a/public/bitacora.html
+++ b/public/bitacora.html
@@ -1,122 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>SICA - Editar perfil</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="icon"
-      type=""
-      href="img/proveguard-low-resolution-logo-color-on-transparent-background.png"
-    />
-    <link href="css/reset.css" rel="stylesheet" />
-    <link href="css/general.css" rel="stylesheet" />
-    <link href="css/bitacora.css" rel="stylesheet" />
-  </head>
 
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    public/users.html
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bitacora</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/bitacora.css">
+    <link rel="stylesheet" href="css/general.css">
+</head>
+
+<body>
+
     <header class="header">
-      <div id="prove-logo" class="logo" title="Inicio">
-        <img
-          src="img/proveguard-low-resolution-logo-color-on-transparent-background.png"
-          alt="Logo ProveGuard"
-        /><span id="rol"></span>
-      </div>
-      <nav>
-        <ul class="nav-links">
-          <li>
-            <a href="registroDeActivosAdmin.html"
-              >Registro / Edición de activos</a
-            >
-          </li>
-          <li><a href="transferIncome.html">Traslados</a></li>
-          <li><a href="bitacora.html">Bitácora</a></li>
-          <li><a href="reportes.html">Reportes</a></li>
-          <li><a href="users.html">Manejo de usuarios</a></li>
-        </ul>
-      </nav>
-      <div class="left-nav">
-        <div id="user-icon" class="logo user-icon" title="Perfil">
-          <img src="img/user-icon.png" alt="user-icon" />
+        <div id="prove-logo" class="logo" title="Inicio">
+            <img src="img/proveguard-low-resolution-logo-color-on-transparent-background.png"
+                alt="Logo ProveGuard" /><span id="rol"></span>
         </div>
-        <div class="logo search-icon" title="Buscar">
-          <img src="img/search-interface-symbol.png" alt="user-icon" />
+        <nav>
+            <ul class="nav-links">
+                <li><a href="registroDeActivosAdmin.html">Registro / Edición de activos</a></li>
+                <li><a href="formularioTraslados.html">Traslados</a></li>
+                <li><a href="Bitacora.html">Bitácora</a></li>
+                <li><a href="reportes.html">Reportes</a></li>
+                <li><a href="users.html">Manejo de usuarios</a></li>
+            </ul>
+        </nav>
+        <div class="left-nav">
+            <div id="user-icon" class="logo user-icon" title="Perfil">
+                <img src="img/user-icon.png" alt="user-icon" />
+            </div>
+            <div class="logo search-icon" title="Buscar">
+                <img src="img/search-interface-symbol.png" alt="user-icon" />
+            </div>
+            <button type="button" class="buttons" onclick="Logout()">
+                Cerrar Sesión
+            </button>
         </div>
-        <button type="button" class="buttons" onclick="Logout()">
-          Cerrar Sesión
-        </button>
-      </div>
     </header>
 
     <main>
-      <h2 class="subtitles">Bitacora</h2>
-      <h2 class="subtitles">Reporte de activos</h2>
-      <p>SICA - FOLIO: 001</p>
-      <div class="container">
-        <div class="inputs">
-          <label for="nombre-empleado">Nombre del empleado</label>
-          <input type="text" id="nombre-empleado" />
+        <div id="miModal" class="modal">
+            <div class="modalContent">
+            <span class="close">&times;</span>
+        <form action="">
+            <div class="column">
+                <div class="titulo">
+                    <h2>Datos de Traslado</h2>
+                </div>
+                <div class="inputLabel">
+                    <div class="empleado">
+                        <label for="txtEmpleado" id="lblNombre">Nombre Del Empleado</label>
+                        <input type="text" id="txtEmpleado"> <br>
+                    </div>
+                    <div class="localizacion">
+                        <label for="txtLocalizacion" id="lblLocalizacion">Localización</label>
+                        <input type="text" id="txtLocalizacion"><br>
+                    </div>
+                    <div class="activo">
+                        <label for="txtActivo" id="lblActivo">ID de Activo</label>
+                        <input type="text" id="txtActivo"><br>
+                    </div>
+                    <div class="fecha">
+                        <label for="txtFecha" id="lblTraslado">Fecha del traslado</label>
+                        <input type="date" id="txtFecha"><br>
+                    </div>
+                    <div class="respon">
+                        <label for="txtRespon" id="lblRespon">Responsable de aceptar o denegar el traslado</label>
+                        <input type="text" id="txtRespon"><br>
+                    </div>
+                </div>
+            </div>
+            <div class="titulo">
+                <h2>Extras del traslado</h2>
+            </div>
+            <div class="inputLabel">
+                <div class="extra">
+                    <label for="txtExtra" id="lblExtras">Extras del traslado</label>
+                    <input type="text" id="txtExtra"><br>
+                </div>
+                <div class="donalmacen">
+                    <label for="txtelec" id="lblElec">Sera almacenado o donado</label>
+                        <select name="" id="txtEstado">
+                            <option value="1" checked>Donación</option>
+                            <option value="0">almacenado</option>
+                        </select>
+                </div>
+                <div class="origen">
+                    <label for="txtOrigin" id="lblOrigen">lugar de origin del activo</label>
+                    <input type="text" id="txtOrigin"><br>
+                </div>
+            </div>
+            <input type="button" id="btnRegistrar"  value="Registrar" class="buttons" />
         </div>
-        <div class="inputs">
-          <label for="localizacion">Localizacion</label>
-          <input type="text" id="localizacion" />
         </div>
-        <div class="inputs">
-          <label for="id-activo">ID de activo</label>
-          <input type="text" id="id-activo" />
+        </form>
+
+
+        <div class="proveBita">
+            <h1 class="prove">ProveGuard</h1>
+            <h1 class="bita">Bitacora</h1>
         </div>
-        <div class="inputs">
-          <label for="fecha-traslado">Fecha de traslado</label>
-          <input type="date" id="fecha-traslado" />
+        <div class="titulos">
+            <h3>Sistema de control de activos</h3>
+            <h3>FOLIO: 001</h3>
+            <h3>Reporte de activos</h3>
         </div>
-        <div class="inputs">
-          <label for="responsable">Responsable de aceptar o denegar</label>
-          <input type="text" id="responsable" />
+        <div class="page-buttons">
+            <button type="button" class="buttons" id="btnActivo" onclick="AbrirFormulario()">Registrar Bitacora</button>
         </div>
-      </div>
-      <h2 class="subtitles">Extras del traslado</h2>
-      <div class="container">
-        <div class="inputs">
-          <label for="responsable">Extras del traslado</label>
-          <input type="text" id="extras" />
-        </div>
-        <div class="inputs radioButtons">
-          <input type="radio" name="radioBtn" value="donacion" />
-          <label for="donado">Donado</label>
-          <input type="radio" name="radioBtn" value="almacenaje" />
-          <label for="almacenaje">Almacenaje</label>
-        </div>
-        <div class="inputs">
-          <label for="origen">Lugar de origen del activo</label>
-          <input type="text" id="origen" />
-        </div>
-        <button type="button" class="buttons" onclick="Validar()">
-          Subir activo
-        </button>
-      </div>
+        <table>
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Activo</th>
+                    <th>Localización</th>
+                    <th>Fecha</th>
+                </tr>
+            </thead>
+            <tbody id="table-body"></tbody>
+        </table>
     </main>
 
     <footer class="footer">
-      <div class="company-name">
-        <h2>ProveGuard &copy;2023</h2>
-      </div>
-      <div class="copyright">
-        <h2>SICA - Sistema de Control de Activos</h2>
-        <h2><a href="landpageEquipo.html">BotWeb Team</a></h2>
-      </div>
-      <ul class="nav-links">
-        <li><a href="#">Contacto</a></li>
-        <li><a href="#">Sedes</a></li>
-        <li><a href="#">Ayuda</a></li>
-      </ul>
+        <div class="company-name">
+            <h2>ProveGuard &copy;2023</h2>
+        </div>
+        <div class="copyright">
+            <h2>SICA - Sistema de Control de Activos</h2>
+            <h2>BotWeb Team</h2>
+        </div>
+        <ul class="nav-links">
+            <li><a href="#">Contacto</a></li>
+            <li><a href="#">Sedes</a></li>
+            <li><a href="#">Ayuda</a></li>
+        </ul>
     </footer>
 
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
+    <script src=" https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="js/utilsBitacora.js"></script>
+    <script src="js/Services/serviceBitacora.js"></script>
+    <script src="js/Controllers/controllerBitacora.js"></script>
     <script src="js/utils.js"></script>
-    <script src="js/Services/generalService.js"></script>
-    <script src="js/Controllers/sessionController.js"></script>
-    <script src="js/Controllers/bitacoraController.js"></script>
-  </body>
+</body>
+
 </html>
