Borrador de Sedes

--- a/public/formTransferUser.html
+++ b/public/formTransferUser.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Traslados</title>
+  <title>SICA - Solicitud de Traslados</title>
   <link rel="icon" type="" href="img/proveguard-low-resolution-logo-color-on-transparent-background.png" />
   <link href="css/reset.css" rel="stylesheet" />
   <link href="css/general.css" rel="stylesheet" />
@@ -143,7 +143,7 @@
     </div>
     <ul class="nav-links">
       <li><a href="#">Contacto</a></li>
-      <li><a href="#">Sedes</a></li>
+      <li><a href="./sede.html">Sedes</a></li>
       <li><a href="#">Ayuda</a></li>
     </ul>
   </footer>
