--- a/public/estadoTraslado.html
+++ b/public/estadoTraslado.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Estado de las solicitudes de traslado</title>
+    <title>SICA - Estado de las solicitudes de traslado</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -71,11 +71,11 @@
       </div>
       <div class="copyright">
         <h2>SICA - Sistema de Control de Activos</h2>
-        <h2><a href="landpageEquipo.html">BotWeb Team</a></h2>
+        <h2 class="botweb"><a href="landpageEquipo.html">BotWeb Team</a></h2>
       </div>
       <ul class="nav-links">
         <li><a href="#">Contacto</a></li>
-        <li><a href="#">Sedes</a></li>
+        <li><a href="./sede.html">Sedes</a></li>
         <li><a href="#">Ayuda</a></li>
       </ul>
     </footer>
