--- a/public/landpageOthers.html
+++ b/public/landpageOthers.html
@@ -64,7 +64,7 @@
       </div>
       <ul class="nav-links">
         <li><a href="#">Contacto</a></li>
-        <li><a href="#">Sedes</a></li>
+        <li><a href="./sede.html">Sedes</a></li>
         <li><a href="#">Ayuda</a></li>
       </ul>
     </footer>
