Se corrigió estado de traslados el label y la posicion del boton para que fuera visualmente igual que el de solicitud de registro, se eliminó en algunas vistas la lupa, se corrieron las vistas para el usuario y se elimino para que no tenga acceso al manejo de usuarios, y se puso el rol correspondiente en varios htmls

--- a/public/estadoDeRegistro.html
+++ b/public/estadoDeRegistro.html
@@ -40,9 +40,6 @@
         <div id="user-icon" class="logo user-icon" title="Perfil">
           <img src="img/user-icon.png" alt="user-icon" />
         </div>
-        <div class="logo search-icon" title="Buscar">
-          <img src="img/search-interface-symbol.png" alt="user-icon" />
-        </div>
         <button type="button" class="buttons" onclick="Logout()">
           Cerrar Sesión
         </button>
@@ -70,6 +67,7 @@
             <th>Fecha</th>
             <th>Usuario</th>
             <th>Codigo</th>
+            <th>Acciones</th>
           </tr>
         </thead>
         <tbody id="table-body"></tbody>
