--- a/public/users.html
+++ b/public/users.html
@@ -15,7 +15,7 @@
   <header class="header">
     <div id="prove-logo" class="logo" title="Inicio">
       <img src="img/proveguard-low-resolution-logo-color-on-transparent-background.png" alt="Logo ProveGuard" /><span
-        id="rol"></span>
+        id="rol">Rol: Admin</span>
     </div>
     <nav>
       <ul class="nav-links">
