--- a/public/estadoTraslado.html
+++ b/public/estadoTraslado.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Estado de las solicitudes de traslado</title>
+    <title>SICA-Estado de las solicitudes de traslado</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -12,6 +12,7 @@
     <link href="css/reset.css" rel="stylesheet" />
     <link href="css/users.css" rel="stylesheet" />
     <link href="css/general.css" rel="stylesheet" />
+    <link href="css/estadoTraslado.css" rel="stylesheet"/>
   </head>
 
   <body>
@@ -20,21 +21,17 @@
         <img
           src="img/proveguard-low-resolution-logo-color-on-transparent-background.png"
           alt="Logo ProveGuard"
-        /><span id="rol"></span>
+        /><span id="rol">Rol: Usuario</span>
       </div>
       <ul class="nav-links">
         <li><a href="ingresoRegistroActivosUsuario.html">Registro / Edición de activos</a></li>
         <li><a href="transferIncome.html">Traslados</a></li>
         <li><a href="bitacora.html">Bitácora</a></li>
         <li><a href="reportes.html">Reportes</a></li>
-        <li><a href="users.html">Manejo de usuarios</a></li>
       </ul>
       <div class="left-nav">
         <div id="user-icon" class="logo user-icon" title="Perfil">
           <img src="img/user-icon.png" alt="user-icon" />
-        </div>
-        <div class="logo search-icon" title="Buscar">
-          <img src="img/search-interface-symbol.png" alt="user-icon" />
         </div>
         <button type="button" class="buttons" onclick="Logout()">
           Cerrar Sesión
@@ -43,10 +40,15 @@
     </header>
 
     <main>
+      <br/><br/>
       <h2 class="subtitles">Estado de solicitudes de Traslado</h2>
+      <br>
       <div class="row">
-        <div class="column">
-          <input type="text" class="buscador" placeholder="Nombre del activo" />
+        <div class="inputs">
+          <label for="txtNombreActivo">Nombre o ID de activo</label>
+          <input type="text" class="buscador"id="txtNombreActivo"/>
+        </div>
+        <div class="botonBuscar">
           <button type="button" class="buttons">Buscar</button>
         </div>
       </div>
