--- a/public/formTransferUser.html
+++ b/public/formTransferUser.html
@@ -17,21 +17,17 @@
   <header class="header">
     <div id="prove-logo" class="logo" title="Inicio">
       <img src="img/proveguard-low-resolution-logo-color-on-transparent-background.png" alt="Logo ProveGuard" /><span
-        id="rol"></span>
+        id="rol">Rol: Usuario</span>
     </div>
     <ul class="nav-links">
-      <li><a href="ingresoRegistroActivosAdmin.html">Registro / Edición de activos</a></li>
+      <li><a href="ingresoRegistroActivosUsuario.html">Registro / Edición de activos</a></li>
       <li><a href="transferIncome.html">Traslados</a></li>
       <li><a href="bitacora.html">Bitácora</a></li>
       <li><a href="reportes.html">Reportes</a></li>
-      <li><a href="users.html">Manejo de usuarios</a></li>
     </ul>
     <div class="left-nav">
       <div id="user-icon" class="logo user-icon" title="Perfil">
         <img src="img/user-icon.png" alt="user-icon" />
-      </div>
-      <div class="logo search-icon" title="Buscar">
-        <img src="img/search-interface-symbol.png" alt="user-icon" />
       </div>
       <button type="button" class="buttons" onclick="Logout()">
         Cerrar Sesión
