--- a/public/historialUsuario.html
+++ b/public/historialUsuario.html
@@ -64,12 +64,12 @@
     </div>
     <div class="copyright">
       <h2>SICA - Sistema de Control de Activos</h2>
-      <h2><a href="landpageEquipo.html">BotWeb Team</a></h2>
+      <h2><a href="../Landing Page Botweb /LandPage.html">BotWeb Team</a></h2>
     </div>
     <ul class="nav-links">
-      <li><a href="#">Contacto</a></li>
+      <li><a href="../Landing Page Botweb /LandPage.html">Contacto</a></li>
       <li><a href="./sede.html">Sedes</a></li>
-      <li><a href="#">Ayuda</a></li>
+      <li><a href="../Landing Page Botweb /LandPage.html">Ayuda</a></li>
     </ul>
   </footer>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
