--- a/public/transferIncomeAdmin.html
+++ b/public/transferIncomeAdmin.html
@@ -5,27 +5,28 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Solicitud / Estado de Traslados</title>
+  <title>Traslado / Estado de Traslados</title>
   <link rel="icon" type="" href="img/proveguard-low-resolution-logo-color-on-transparent-background.png" />
   <link href="css/reset.css" rel="stylesheet" />
   <link href="css/general.css" rel="stylesheet" />
-  <link rel="stylesheet" href="css/transferIncome.css" />
+  <link rel="stylesheet" href="css/transferIncomeAdmin.css" />
 </head>
 
 <body>
   <header class="header">
     <div id="prove-logo" class="logo" title="Inicio">
       <img src="img/proveguard-low-resolution-logo-color-on-transparent-background.png" alt="Logo ProveGuard" /><span
-        id="rol">Rol: Usuario</span>
+        id="rol">Rol: Admin</span>
     </div>
     <nav>
       <ul class="nav-links">
         <li>
-          <a href="ingresoRegistroActivosUsuario.html">Registro / Edición de activos</a>
+          <a href="ingresoRegistroActivosAdmin.html">Registro / Edición de activos</a>
         </li>
-        <li><a href="transferIncome.html">Traslados</a></li>
+        <li><a href="transferIncomeAdmin.html">Traslados</a></li>
         <li><a href="bitacora.html">Bitácora</a></li>
         <li><a href="reportes.html">Reportes</a></li>
+        <li><a href="users.html">Manejo de usuarios</a></li>
       </ul>
     </nav>
     <div class="left-nav">
@@ -41,12 +42,12 @@
   <main>
     <div class="subtitles">
       <br></br>
-      <h2> Solicitud / Estado de Traslados</h2>
+      <h2> Traslado / Estado de Traslados</h2>
       </br>
 
       <div class="buttonContainer">
-        <button class="buttons" onclick="window.location.href='formTransferUser.html'"> Solicitud de Traslado</button>
-        <button class="buttons" onclick="window.location.href='estadoTraslado.html'">Estado de solicitudes</button>
+        <button class="buttons" onclick="window.location.href='formTransferAdmin.html'"> Realizar Traslado</button>
+        <button class="buttons" onclick="window.location.href='estadoTrasladoAdmin.html'">Estado de solicitudes</button>
       </div>
     </div>
 
