--- a/public/editProfileUser.html
+++ b/public/editProfileUser.html
@@ -11,7 +11,7 @@
     />
     <link href="css/reset.css" rel="stylesheet" />
     <link href="css/general.css" rel="stylesheet" />
-    <link href="css/editProfile.css" rel="stylesheet" />
+    <link href="css/editProfileUser.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -20,19 +20,18 @@
         <img
           src="img/proveguard-low-resolution-logo-color-on-transparent-background.png"
           alt="Logo ProveGuard"
-        /><span id="rol">Rol: Admin</span>
+        /><span id="rol">Rol: Usuario</span>
       </div>
       <nav>
         <ul class="nav-links">
           <li>
-            <a href="ingresoRegistroActivosAdmin.html"
+            <a href="ingresoRegistroActivosUsuario.html"
               >Registro / Edición de activos</a
             >
           </li>
-          <li><a href="transferIncomeAdmin.html">Traslados</a></li>
+          <li><a href="transferIncome.html">Traslados</a></li>
           <li><a href="bitacora.html">Bitácora</a></li>
           <li><a href="reportes.html">Reportes</a></li>
-          <li><a href="users.html">Manejo de usuarios</a></li>
         </ul>
       </nav>
       <div class="left-nav">
@@ -153,6 +152,5 @@
     <script src="js/utils.js"></script>
     <script src="js/Services/generalService.js"></script>
     <script src="js/Controllers/sessionController.js"></script>
-    <script src="js/Controllers/editProfileController.js"></script>
   </body>
 </html>
