--- a/public/users.html
+++ b/public/users.html
@@ -19,8 +19,8 @@
     </div>
     <nav>
       <ul class="nav-links">
-        <li><a href="registroDeActivosAdmin.html">Registro / Edición de activos</a></li>
-        <li><a href="transferIncome.html">Traslados</a></li>
+        <li><a href="ingresoRegistroActivosAdmin.html">Registro / Edición de activos</a></li>
+        <li><a href="transferIncomeAdmin.html">Traslados</a></li>
         <li><a href="bitacora.html">Bitácora</a></li>
         <li><a href="reportes.html">Reportes</a></li>
         <li><a href="users.html">Manejo de usuarios</a></li>
@@ -29,9 +29,6 @@
     <div class="left-nav">
       <div id="user-icon" class="logo user-icon" title="Perfil">
         <img src="img/user-icon.png" alt="user-icon" />
-      </div>
-      <div class="logo search-icon" title="Buscar">
-        <img src="img/search-interface-symbol.png" alt="user-icon" />
       </div>
       <button type="button" class="buttons" onclick="Logout()">
         Cerrar Sesión
