De contacto y ayuda a landpageBotweb.com

--- a/public/estadoDeSolicitudesUsuario.html
+++ b/public/estadoDeSolicitudesUsuario.html
@@ -49,13 +49,13 @@
       </div>
     </header>
     <main>
-      <br/><br/>
+      <br /><br />
       <h2 class="subtitles">Estados de solicitudes</h2>
-      <br/>
+      <br />
       <div>
         <div class="inputs">
           <label for="txtNombreActivo">Nombre o ID de activo</label>
-          <input type="text" class="buscador"id="txtNombreActivo"/>
+          <input type="text" class="buscador" id="txtNombreActivo" />
         </div>
         <div class="botonBuscar">
           <button type="button" class="buttons">Buscar</button>
@@ -84,9 +84,9 @@
         <h2><a href="../Landing Page Botweb /LandPage.html">BotWeb Team</a></h2>
       </div>
       <ul class="nav-links">
-        <li><a href="../Landing Page Botweb /LandPage.html">Contacto</a></li>
-        <li><a href="./sede.html">Sedes</a></li>
-        <li><a href="../Landing Page Botweb /LandPage.html">Ayuda</a></li>
+        <li><a href="landpageBotweb.html">Contacto</a></li>
+        <li><a href="sede.html">Sedes</a></li>
+        <li><a href="landpageBotweb.html">Ayuda</a></li>
       </ul>
     </footer>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
