--- a/public/landpageAdmin.html
+++ b/public/landpageAdmin.html
@@ -66,9 +66,9 @@
         <h2><a href="landpageEquipo.html">BotWeb Team</a></h2>
       </div>
       <ul class="nav-links">
-        <li><a href="#">Contacto</a></li>
-        <li><a href="./sede.html">Sedes</a></li>
-        <li><a href="#">Ayuda</a></li>
+        <li><a href="landpageBotweb.html">Contacto</a></li>
+        <li><a href="sede.html">Sedes</a></li>
+        <li><a href="landpageBotweb.html">Ayuda</a></li>
       </ul>
     </footer>
 
