--- a/public/estadoTraslado.html
+++ b/public/estadoTraslado.html
@@ -23,7 +23,11 @@
         /><span id="rol"></span>
       </div>
       <ul class="nav-links">
-        <li><a href="ingresoRegistroActivosUsuario.html">Registro / Edición de activos</a></li>
+        <li>
+          <a href="ingresoRegistroActivosUsuario.html"
+            >Registro / Edición de activos</a
+          >
+        </li>
         <li><a href="transferIncome.html">Traslados</a></li>
         <li><a href="bitacora.html">Bitácora</a></li>
         <li><a href="reportes.html">Reportes</a></li>
@@ -74,9 +78,9 @@
         <h2><a href="../Landing Page Botweb /LandPage.html">BotWeb Team</a></h2>
       </div>
       <ul class="nav-links">
-        <li><a href="../Landing Page Botweb /LandPage.html">Contacto</a></li>
-        <li><a href="./sede.html">Sedes</a></li>
-        <li><a href="../Landing Page Botweb /LandPage.html">Ayuda</a></li>
+        <li><a href="landpageBotweb.html">Contacto</a></li>
+        <li><a href="sede.html">Sedes</a></li>
+        <li><a href="landpageBotweb.html">Ayuda</a></li>
       </ul>
     </footer>
 
