--- a/public/historialBitacora.html
+++ b/public/historialBitacora.html
@@ -121,12 +121,12 @@
   </div>
   <div class="copyright">
     <h2>SICA - Sistema de Control de Activos</h2>
-    <h2><a href="../Landing Page Botweb /LandPage.html">BotWeb Team</a></h2>
+    <h2><a href="landpageBotweb.html">BotWeb Team</a></h2>
   </div>
   <ul class="nav-links">
-    <li><a href="../Landing Page Botweb /LandPage.html">Contacto</a></li>
-    <li><a href="./sede.html">Sedes</a></li>
-    <li><a href="../Landing Page Botweb /LandPage.html">Ayuda</a></li>
+    <li><a href="landpageBotweb.html">Contacto</a></li>
+    <li><a href="sede.html">Sedes</a></li>
+    <li><a href="landpageBotweb.html">Ayuda</a></li>
   </ul>
 </footer>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
