--- a/public/ingresoRegistroActivosAdmin.html
+++ b/public/ingresoRegistroActivosAdmin.html
@@ -54,10 +54,18 @@
         <h2>Registro / Edicion de activos</h2>
         <br />
         <div>
-          <button type="button" class="buttons" onclick="window.location.href='registroDeActivosAdmin.html'">
+          <button
+            type="button"
+            class="buttons"
+            onclick="window.location.href='registroDeActivosAdmin.html'"
+          >
             Registrar activos
           </button>
-          <button type="button" class="buttons" onclick="window.location.href='estadoDeRegistro.html'">
+          <button
+            type="button"
+            class="buttons"
+            onclick="window.location.href='estadoDeRegistro.html'"
+          >
             Solicitudes de registro
           </button>
         </div>
@@ -69,12 +77,12 @@
       </div>
       <div class="copyright">
         <h2>SICA - Sistema de Control de Activos</h2>
-        <h2> <a href="../Landing Page Botweb /LandPage.html">BotWeb Team</a></h2>
+        <h2><a href="landpageBotweb.html">BotWeb Team</a></h2>
       </div>
       <ul class="nav-links">
-        <li><a href="../Landing Page Botweb /LandPage.html">Contacto</a></li>
-        <li><a href="./sede.html">Sedes</a></li>
-        <li><a href="../Landing Page Botweb /LandPage.html">Ayuda</a></li>
+        <li><a href="landpageBotweb.html">Contacto</a></li>
+        <li><a href="sede.html">Sedes</a></li>
+        <li><a href="landpageBotweb.html">Ayuda</a></li>
       </ul>
     </footer>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
