--- a/public/sede.html
+++ b/public/sede.html
@@ -48,7 +48,7 @@
       <br></br>
       <h2> Sedes de ProveGuard</h2>
       </br>
-      
+
       <div class="inputs">
         <button class="buttons" onclick="window.location.href= '#'">Editar/Agregar Sedes</button>
         <input type="text" class="buscador" placeholder="Nombre de la sede" />
@@ -58,15 +58,15 @@
     </div>
 
 
-      <table id="transfers">
-        <thead>
-          <tr>
-            <th>Nombre de la sede</th>
-            <th>Ubicación</th>
-          </tr>
-        </thead>
-        <tbody id="table-body"></tbody>
-      </table>
+    <table id="transfers">
+      <thead>
+        <tr>
+          <th>Nombre de la sede</th>
+          <th>Ubicación</th>
+        </tr>
+      </thead>
+      <tbody id="table-body"></tbody>
+    </table>
 
   </main>
 
@@ -76,12 +76,12 @@
     </div>
     <div class="copyright">
       <h2>SICA - Sistema de Control de Activos</h2>
-      <h2><a href="../Landing Page Botweb /LandPage.html">BotWeb Team</a></h2>
+      <h2><a href="landpageBotweb.html">BotWeb Team</a></h2>
     </div>
     <ul class="nav-links">
-      <li><a href="../Landing Page Botweb /LandPage.html">Contacto</a></li>
-      <li><a href="./sede.html">Sedes</a></li>
-      <li><a href="../Landing Page Botweb /LandPage.html">Ayuda</a></li>
+      <li><a href="landpageBotweb.html">Contacto</a></li>
+      <li><a href="sede.html">Sedes</a></li>
+      <li><a href="landpageBotweb.html">Ayuda</a></li>
     </ul>
   </footer>
 
